Wed Feb 14 16:03:25 EET 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Made some sanity checks to silc_server_daemonise like to check
	  whether the requested user and group actually exists.

	* Added sanity check to SKE's silc_ske_responder_finish to check
	  that the public and private key actually is valid. 

	* Invalidate the client's nickname when receiving Replace ID
	  packet and the Client ID is being replaced.  This means that the
	  server will query the nickname if someone needs it (client)
	  a bit later.

	* Sort the ID Cache in client library when the ID Cache data
	  has changed (needs sorting).

	* Do not allow for SILC client to create several connections to
	  several servers.  The client does not support windows right now
	  and generating multiple connections causes weird behaviour.

	  Irssi-silc client does support windows and can handle several
	  connections without problems, see: www.irssi.org and SILC plugin.

	* Fixed some places where client was added to the IDList.  The
	  rule of thumb is following (in order to get everything right):
	  If the client is directly connected local client then the 
	  `connection' argument must be set and `router' argument must be 
	  NULL to silc_idlist_add_client function.  If the client is not
	  directly connected client then the `router' argument must
	  bet set and the `connection' argument must be NULL to the
	  silc_idlist_add_client function.

	* The funtion silc_server_packet_send_local_channel actually did
	  not check whether the client was locally connected or not.  It
	  does that now.  Fixed a bug related to LEAVE command.

	* Fixed Remove Channel User payload parsing bug in server's
	  silcd/packet_receive.c.  Fixed a bug related to LEAVE command.

	* The server's silc_server_save_channel_key now checks also the
	  global ID list for the channel as it might not be in the local
	  list.  Fixed a bug related to LEAVE command.
